@@ -7,8 +7,4 @@ COPY ./h2/bin/h2*.jar /usr/lib/h2/
 #exposes the web server port to allow testing
 EXPOSE 8082
 
-CMD ["java", "-cp", "/usr/lib/h2/*.jar","org.h2.tools.Server", \
-	"-J-XX:+UnlockExperimentalVMOptions", \
-    "-J-XX:+UseCGroupMemoryLimitForHeap", \
-    "-R-XX:+UnlockExperimentalVMOptions", \
-    "-R-XX:+UseCGroupMemoryLimitForHeap"]
+CMD ["java", "-cp", "/usr/lib/h2/*.jar", "org.h2.tools.Server" ]
